<resources>
    <string name="app_name">witim</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_proj">Project</string>
    <string name="title_find">Find</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="text_project_ongoing">On-Progress</string>
    <string name="text_project_finished">Finished</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="txt_wlc">Welcome to witim</string>
    <string name="btn_start">Get Started</string>
<<<<<<< HEAD
<<<<<<< HEAD

    <string-array name="roles">

        <item>Hipster</item>
        <item>Hacker</item>
        <item>Hustler</item>
    </string-array>
    <string name="btn_login">Login</string>
    <string name="btn_reg">Register</string>
    <string name="frgt">Forgot Password?</string>
    <string name="editTxt_username">Full Name</string>
    <string name="editTxt_email">Email</string>
    <string name="editTxt_Password">Password</string>
    <string name="editTxt_Confirm">Confirm Password</string>
    <string name="editTxt_role">Choose Your Role</string>
    <string name="login">Already have an account? Login</string>
=======
>>>>>>> parent of eb85119... NAME AND ROLE CHANGING YEAH
=======
>>>>>>> parent of eb85119... NAME AND ROLE CHANGING YEAH
</resources>
