<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RegOrLoginActivity">

    <ImageView
        android:id="@+id/iv_gradBg"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btn_gradient_style" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="154dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/witim" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="72dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/btn_login"
        android:textSize="16dp"
        android:background="@drawable/btn_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded_border"
        android:text="@string/btn_reg"
        android:textAllCaps="false"
        android:textColor="@color/topTabBar"

        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/frgt"
        android:textColor="@color/topTabBar"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_gradBg"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>